kubernetes/apps/network/external-services/octoprint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: octoprint
  namespace: network
subsets:
  - addresses:
    - ip: 10.0.70.178
    ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint
  namespace: network
spec:
 ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    auth.home.arpa/enabled: "true"
  labels:
    app.kubernetes.io/instance: octoprint
    app.kubernetes.io/name: octoprint
  name: octoprint
  namespace: network
spec:
  ingressClassName: nginx
  rules:
  - host: octoprint.${EXTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: octoprint
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - octoprint.${EXTERNAL_DOMAIN}
    secretName: octoprint-tls-external
